--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <a href="https://g.co/gemini/share/e75063dcc895" target="_blank" class="book-card">
                     <div class="book-cover">
                         <div class="book-icon">📖</div>
-                        <div class="book-title">O somho de Isidro</div>
+                        <div class="book-title">O sonho de Isidro</div>
                         <div class="open-indicator">Clique para abrir</div>
                     </div>
                 </a>
