--- a/index.html
+++ b/index.html
@@ -3,143 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biblioteca Digital - 7º Ano</title>
+    <title>Portal FliSanta</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>📚 Biblioteca Digital - 7º Ano</h1>
-        <p>Histórias criadas pelos alunos no Gemini Storybook</p>
+        <h1>🎉 Portal FliSanta</h1>
+        <p>Explore os projetos e produções dos alunos</p>
+        <nav class="main-nav">
+            <a href="index.html" target="_blank" rel="noopener noreferrer">Início</a>
+            <a href="apps.html" target="_blank" rel="noopener noreferrer">Apps</a>
+            <a href="escape.html" target="_blank" rel="noopener noreferrer">Escape Room</a>
+            <a href="livros.html" target="_blank" rel="noopener noreferrer">Biblioteca</a>
+            <a href="venenodigital.html" target="_blank" rel="noopener noreferrer">Veneno Digital</a>
+        </nav>
     </header>
 
     <main>
-        <!-- Prateleira 7º Ano A -->
         <section class="bookshelf">
-            <h2>📖 7º Ano A</h2>
+            <h2>📌 Acesse as Páginas</h2>
             <div class="books-container">
-                <a href="https://g.co/gemini/share/6a3b8c70da57" target="_blank" class="book-card">
+                <a href="apps.html" class="book-card">
                     <div class="book-cover">
-                        <div class="book-icon">📖</div>
-                        <div class="book-title">O mico digital</div>
-                        <div class="open-indicator">Clique para abrir</div>
+                        <div class="book-icon">📱</div>
+                        <div class="book-title">Apps Sustentáveis - 9º Ano</div>
+                        <div class="open-indicator">Entrar</div>
                     </div>
                 </a>
 
-                <a href="https://g.co/gemini/share/e4442a55038a" target="_blank" class="book-card">
+                <a href="escape.html" class="book-card">
                     <div class="book-cover">
-                        <div class="book-icon">📖</div>
-                        <div class="book-title">O desafio do bullying</div>
-                        <div class="open-indicator">Clique para abrir</div>
+                        <div class="book-icon">🔓</div>
+                        <div class="book-title">Escape Room - 8º Ano</div>
+                        <div class="open-indicator">Entrar</div>
                     </div>
                 </a>
 
-                <a href="https://g.co/gemini/share/7a3b5edfc2d9" target="_blank" class="book-card">
+                <a href="livros.html" class="book-card">
                     <div class="book-cover">
-                        <div class="book-icon">📖</div>
-                        <div class="book-title">A grande rede encantada</div>
-                        <div class="open-indicator">Clique para abrir</div>
+                        <div class="book-icon">📚</div>
+                        <div class="book-title">Biblioteca Digital - 7º Ano</div>
+                        <div class="open-indicator">Entrar</div>
                     </div>
                 </a>
 
-                <a href="https://g.co/gemini/share/de5f04116ae4" target="_blank" class="book-card">
+                <a href="venenodigital.html" class="book-card">
                     <div class="book-cover">
-                        <div class="book-icon">📖</div>
-                        <div class="book-title">A solidão digital</div>
-                        <div class="open-indicator">Clique para abrir</div>
-                    </div>
-                </a>
-
-                <a href="https://g.co/gemini/share/594893e56a7f" target="_blank" class="book-card">
-                    <div class="book-cover">
-                        <div class="book-icon">📖</div>
-                        <div class="book-title">O despertar de um herói</div>
-                        <div class="open-indicator">Clique para abrir</div>
-                    </div>
-                </a>
-
-                <a href="https://g.co/gemini/share/2b45d6f19091" target="_blank" class="book-card">
-                    <div class="book-cover">
-                        <div class="book-icon">📖</div>
-                        <div class="book-title">Novo mundo</div>
-                        <div class="open-indicator">Clique para abrir</div>
-                    </div>
-                </a>
-
-                <a href="https://g.co/gemini/share/fe5af767d2e2" target="_blank" class="book-card">
-                    <div class="book-cover">
-                        <div class="book-icon">📖</div>
-                        <div class="book-title">Uma aventura moderna</div>
-                        <div class="open-indicator">Clique para abrir</div>
-                    </div>
-                </a>
-            </div>
-        </section>
-
-        <!-- Prateleira 7º Ano B -->
-        <section class="bookshelf">
-            <h2>📖 7º Ano B</h2>
-            <div class="books-container">
-                <a href="https://g.co/gemini/share/81cd7011dd66" target="_blank" class="book-card">
-                    <div class="book-cover">
-                        <div class="book-icon">📖</div>
-                        <div class="book-title">O cavaleiro digital</div>
-                        <div class="open-indicator">Clique para abrir</div>
-                    </div>
-                </a>
-
-                <a href="https://g.co/gemini/share/6617ef979f27" target="_blank" class="book-card">
-                    <div class="book-cover">
-                        <div class="book-icon">📖</div>
-                        <div class="book-title">O feitiço da luz aprisionada</div>
-                        <div class="open-indicator">Clique para abrir</div>
-                    </div>
-                </a>
-
-                <a href="https://g.co/gemini/share/7a1b21327f4a" target="_blank" class="book-card">
-                    <div class="book-cover">
-                        <div class="book-icon">📖</div>
-                        <div class="book-title">Contra fake news e injustiças</div>
-                        <div class="open-indicator">Clique para abrir</div>
-                    </div>
-                </a>
-
-                <a href="https://g.co/gemini/share/cbd2c46a8c7a" target="_blank" class="book-card">
-                    <div class="book-cover">
-                        <div class="book-icon">📖</div>
-                        <div class="book-title">O cavaleiro da tela</div>
-                        <div class="open-indicator">Clique para abrir</div>
-                    </div>
-                </a>
-
-                <a href="https://gemini.google.com/share/4f2eceb39794" target="_blank" class="book-card">
-                    <div class="book-cover">
-                        <div class="book-icon">📖</div>
-                        <div class="book-title">O cavaleiro e a era das bugigangas desengonçadas</div>
-                        <div class="open-indicator">Clique para abrir</div>
-                    </div>
-                </a>
-
-                <a href="https://g.co/gemini/share/988256384cc3" target="_blank" class="book-card">
-                    <div class="book-cover">
-                        <div class="book-icon">📖</div>
-                        <div class="book-title">Uma aventura no tempo</div>
-                        <div class="open-indicator">Clique para abrir</div>
-                    </div>
-                </a>
-
-                <a href="https://g.co/gemini/share/e75063dcc895" target="_blank" class="book-card">
-                    <div class="book-cover">
-                        <div class="book-icon">📖</div>
-                        <div class="book-title">O sonho de Isidro</div>
-                        <div class="open-indicator">Clique para abrir</div>
-                    </div>
-                </a>
-
-                <a href="https://g.co/gemini/share/34ee8bd43762" target="_blank" class="book-card">
-                    <div class="book-cover">
-                        <div class="book-icon">📖</div>
-                        <div class="book-title">A solidão digital</div>
-                        <div class="open-indicator">Clique para abrir</div>
+                        <div class="book-icon">🎬</div>
+                        <div class="book-title">Veneno Digital - 7º Ano</div>
+                        <div class="open-indicator">Entrar</div>
                     </div>
                 </a>
             </div>
@@ -147,7 +59,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Biblioteca Digital - Histórias criadas pelos alunos</p>
+        <p>© 2024 FliSanta - Portal de Projetos</p>
     </footer>
 </body>
 </html>
