--- a/apps.html
+++ b/apps.html
@@ -14,6 +14,7 @@
             <a href="index.html" target="_blank" rel="noopener noreferrer">Início</a>
             <a href="apps.html" target="_blank" rel="noopener noreferrer">Apps</a>
             <a href="escape.html" target="_blank" rel="noopener noreferrer">Escape Room</a>
+            <a href="grandedesafio.html" target="_blank" rel="noopener noreferrer">O Grande Desafio</a>
             <a href="livros.html" target="_blank" rel="noopener noreferrer">Biblioteca</a>
             <a href="venenodigital.html" target="_blank" rel="noopener noreferrer">Veneno Digital</a>
         </nav>
