--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a href="index.html" target="_blank" rel="noopener noreferrer">Início</a>
             <a href="apps.html" target="_blank" rel="noopener noreferrer">Apps</a>
             <a href="escape.html" target="_blank" rel="noopener noreferrer">Escape Room</a>
+            <a href="grandedesafio.html" target="_blank" rel="noopener noreferrer">O Grande Desafio</a>
             <a href="livros.html" target="_blank" rel="noopener noreferrer">Biblioteca</a>
             <a href="venenodigital.html" target="_blank" rel="noopener noreferrer">Veneno Digital</a>
         </nav>
@@ -35,6 +36,14 @@
                     <div class="book-cover">
                         <div class="book-icon">🔓</div>
                         <div class="book-title">Escape Room - 8º Ano</div>
+                        <div class="open-indicator">Entrar</div>
+                    </div>
+                </a>
+
+                <a href="grandedesafio.html" class="book-card">
+                    <div class="book-cover">
+                        <div class="book-icon">📘</div>
+                        <div class="book-title">O Grande Desafio - 8º Ano</div>
                         <div class="open-indicator">Entrar</div>
                     </div>
                 </a>
