--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="apps.html" target="_blank" rel="noopener noreferrer">Apps</a>
             <a href="escape.html" target="_blank" rel="noopener noreferrer">Escape Room</a>
             <a href="grandedesafio.html" target="_blank" rel="noopener noreferrer">O Grande Desafio</a>
-            <a href="livros.html" target="_blank" rel="noopener noreferrer">Biblioteca</a>
+            <a href="livros.html" target="_blank" rel="noopener noreferrer">Dom Quixote</a>
             <a href="venenodigital.html" target="_blank" rel="noopener noreferrer">Veneno Digital</a>
         </nav>
     </header>
