--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="grandedesafio.html" target="_blank" rel="noopener noreferrer">O Grande Desafio</a>
             <a href="livros.html" target="_blank" rel="noopener noreferrer">Dom Quixote</a>
             <a href="venenodigital.html" target="_blank" rel="noopener noreferrer">Veneno Digital</a>
+            <a href="padlet.html" target="_blank" rel="noopener noreferrer">Padlet</a>
         </nav>
     </header>
 
@@ -60,6 +61,14 @@
                     <div class="book-cover">
                         <div class="book-icon">🎬</div>
                         <div class="book-title">Veneno Digital - 7º Ano</div>
+                        <div class="open-indicator">Entrar</div>
+                    </div>
+                </a>
+
+                <a href="padlet.html" class="book-card">
+                    <div class="book-cover">
+                        <div class="book-icon">🗂️</div>
+                        <div class="book-title">Padlet - 7º Ano</div>
                         <div class="open-indicator">Entrar</div>
                     </div>
                 </a>
