--- a/grandedesafio.html
+++ b/grandedesafio.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>📘 O Grande Desafio - 8º Ano</h1>
-        <p>Sites que abordam o livro "O grande desafio", de Pedro Bandeira</p>
+        <p>Sites que abordam o livro "O Grande Desafio", de Pedro Bandeira</p>
         <nav class="main-nav">
             <a href="index.html" target="_blank" rel="noopener noreferrer">Início</a>
             <a href="apps.html" target="_blank" rel="noopener noreferrer">Apps</a>
@@ -17,6 +17,7 @@
             <a href="grandedesafio.html" target="_blank" rel="noopener noreferrer">O Grande Desafio</a>
             <a href="livros.html" target="_blank" rel="noopener noreferrer">Biblioteca</a>
             <a href="venenodigital.html" target="_blank" rel="noopener noreferrer">Veneno Digital</a>
+            <a href="padlet.html" target="_blank" rel="noopener noreferrer">Padlet</a>
         </nav>
     </header>
 
