--- a/livros.html
+++ b/livros.html
@@ -17,6 +17,7 @@
             <a href="grandedesafio.html" target="_blank" rel="noopener noreferrer">O Grande Desafio</a>
             <a href="livros.html" target="_blank" rel="noopener noreferrer">Biblioteca</a>
             <a href="venenodigital.html" target="_blank" rel="noopener noreferrer">Veneno Digital</a>
+            <a href="padlet.html" target="_blank" rel="noopener noreferrer">Padlet</a>
         </nav>
     </header>
 
