--- a/index.html
+++ b/index.html
@@ -75,6 +75,57 @@
                 </a>
             </div>
         </section>
+
+        <section class="bookshelf" aria-labelledby="sobre-projetos">
+            <h2 id="sobre-projetos">📖 Sobre os Projetos</h2>
+            <div class="project-articles">
+                <article class="project-article">
+                    <p class="lead-quote">“EDUCAR PARA PENSAR, CRIAR PARA MUDAR.”</p>
+                    <h3>Projeto Sustentabilidade – 9º ano EF II - CARTILHAS E APP’S</h3>
+                    <p>Os alunos do 9º ano do Colégio Santa Marcelina desenvolveram um projeto interdisciplinar sobre sustentabilidade, consumismo e obsolescência programada, em diálogo com a Campanha da Fraternidade 2025. O trabalho envolveu debates, escuta e produção colaborativa, resultando em cartilhas digitais educativas e aplicativos funcionais com dicas de consumo consciente, reciclagem e economia de recursos.</p>
+                    <p>Integrando Língua Portuguesa, Redação, Ensino Religioso e Tecnologia Educacional, o projeto estimulou a visão crítica, a criatividade e a responsabilidade social dos estudantes. Todos os materiais foram reunidos em um espaço digital acessível, incentivando a comunidade a adotar práticas mais sustentáveis.</p>
+                    <p>💡 Pequenas atitudes podem gerar grandes mudanças.</p>
+                    <div class="cta">
+                        <a class="btn" href="apps.html">Ver Apps</a>
+                        <a class="btn" href="cartilhas.html">Ver Cartilhas</a>
+                    </div>
+                </article>
+
+                <article class="project-article">
+                    <h3>8º ANO DESENVOLVE PROJETO INTERDISCIPLINAR INSPIRADO NA OBRA “O GRANDE DESAFIO” - SITE</h3>
+                    <p>Os alunos do 8º ano do Colégio Santa Marcelina – Perdizes realizaram um projeto inspirado no livro O Grande Desafio (Pedro Bandeira), integrando Língua Portuguesa, Redação, CHC e Tecnologia Educacional. O trabalho promoveu reflexões sobre amizade, empatia, respeito e inclusão, culminando na criação de um site interativo com análises e atividades digitais. Destaque para o contato com o autor, que elogiou a iniciativa e reconheceu a qualidade do material, reforçando a união entre literatura e tecnologia para aprendizagens significativas.</p>
+                    <div class="cta">
+                        <a class="btn" href="grandedesafio.html">Ver Site</a>
+                    </div>
+                </article>
+
+                <article class="project-article">
+                    <h3>SUSTENTABILIDADE E CONSUMO CONSCIENTE — Projeto Interdisciplinar – 8º ano – ESCAPE ROOM</h3>
+                    <p>Os alunos do 8º ano do Colégio Santa Marcelina desenvolveram um projeto interdisciplinar a partir do livro Você precisa de quê? (Silmara Franco) e da Campanha da Fraternidade 2025, refletindo sobre sustentabilidade, consumo e cuidado com a Casa Comum.</p>
+                    <p>As disciplinas de Língua Portuguesa, Redação, Ciências da Computação, Tecnologia Educacional e Ensino Religioso integraram o trabalho, abordando criticamente temas como reciclagem, geração de lixo, consumismo e impactos sociais e ambientais.</p>
+                    <p>Como culminância, os estudantes criaram um Escape Room temático, no qual os participantes resolvem enigmas e mistérios relacionados a problemas atuais: desperdício de recursos, descarte incorreto de resíduos e escolhas de consumo. A atividade uniu entretenimento e aprendizado, estimulando lógica, criatividade e responsabilidade socioambiental.</p>
+                    <p>O projeto contou com a orientação das professoras Claudia, Mirian, Melina, Gisele e do professor Marcelo, e os resultados puderam ser acessados pelo público via QR Code.</p>
+                    <p>💡 A principal lição: pequenas escolhas conscientes podem transformar realidades.</p>
+                    <div class="cta">
+                        <a class="btn" href="escape.html">Ver Escape Room</a>
+                    </div>
+                </article>
+
+                <article class="project-article">
+                    <p class="lead-quote">“ENTRE SONHOS E REALIDADE”</p>
+                    <h3>Projeto Interdisciplinar – 7º Ano – PADLET</h3>
+                    <p>Os alunos do 7º ano do Colégio Santa Marcelina mergulharam em diferentes obras literárias e, com criatividade, uniram leitura, reflexão e tecnologia em um projeto interdisciplinar que envolveu Língua Portuguesa, Redação, CHC e Tecnologia Educacional.</p>
+                    <p>A partir da obra Veneno Digital, produziram podcasts com análises e debates sobre bullying e cyberbullying, dando voz às preocupações juvenis. Inspirados em Dom Quixote, o Cavaleiro da Triste Figura, criaram livros que reinterpretam temas como sonhos, idealismo, fantasia e desafios da vida.</p>
+                    <p>Como culminância, organizaram um Padlet interativo com materiais sobre Miguel de Cervantes, contexto histórico, curiosidades e interpretações, ampliando a experiência literária.</p>
+                    <p>O projeto mostrou como a tradição literária pode se reinventar com recursos digitais, incentivando novas formas de expressão e compartilhamento criativo.</p>
+                    <div class="cta">
+                        <a class="btn" href="padlet.html">Ver Padlet</a>
+                        <a class="btn" href="venenodigital.html">Veneno Digital</a>
+                        <a class="btn" href="livros.html">Dom Quixote</a>
+                    </div>
+                </article>
+            </div>
+        </section>
     </main>
 
     <footer>
