--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <a href="cartilhas.html" target="_blank" rel="noopener noreferrer">Cartilhas</a>
         </nav>
     </header>
+    <div class="quick-links">
+        <a class="btn" href="#sobre-projetos">Ir para: Sobre os Projetos</a>
+    </div>
 
     <main>
         <section class="bookshelf">
@@ -86,8 +89,8 @@
                     <p>Integrando Língua Portuguesa, Redação, Ensino Religioso e Tecnologia Educacional, o projeto estimulou a visão crítica, a criatividade e a responsabilidade social dos estudantes. Todos os materiais foram reunidos em um espaço digital acessível, incentivando a comunidade a adotar práticas mais sustentáveis.</p>
                     <p>💡 Pequenas atitudes podem gerar grandes mudanças.</p>
                     <div class="cta">
-                        <a class="btn" href="apps.html">Ver Apps</a>
-                        <a class="btn" href="cartilhas.html">Ver Cartilhas</a>
+                        <a class="btn" href="apps.html" target="_blank" rel="noopener noreferrer">Ver Apps</a>
+                        <a class="btn" href="cartilhas.html" target="_blank" rel="noopener noreferrer">Ver Cartilhas</a>
                     </div>
                 </article>
 
@@ -95,7 +98,7 @@
                     <h3>8º ANO DESENVOLVE PROJETO INTERDISCIPLINAR INSPIRADO NA OBRA “O GRANDE DESAFIO” - SITE</h3>
                     <p>Os alunos do 8º ano do Colégio Santa Marcelina – Perdizes realizaram um projeto inspirado no livro O Grande Desafio (Pedro Bandeira), integrando Língua Portuguesa, Redação, CHC e Tecnologia Educacional. O trabalho promoveu reflexões sobre amizade, empatia, respeito e inclusão, culminando na criação de um site interativo com análises e atividades digitais. Destaque para o contato com o autor, que elogiou a iniciativa e reconheceu a qualidade do material, reforçando a união entre literatura e tecnologia para aprendizagens significativas.</p>
                     <div class="cta">
-                        <a class="btn" href="grandedesafio.html">Ver Site</a>
+                        <a class="btn" href="grandedesafio.html" target="_blank" rel="noopener noreferrer">Ver Site</a>
                     </div>
                 </article>
 
@@ -107,7 +110,7 @@
                     <p>O projeto contou com a orientação das professoras Claudia, Mirian, Melina, Gisele e do professor Marcelo, e os resultados puderam ser acessados pelo público via QR Code.</p>
                     <p>💡 A principal lição: pequenas escolhas conscientes podem transformar realidades.</p>
                     <div class="cta">
-                        <a class="btn" href="escape.html">Ver Escape Room</a>
+                        <a class="btn" href="escape.html" target="_blank" rel="noopener noreferrer">Ver Escape Room</a>
                     </div>
                 </article>
 
@@ -119,9 +122,9 @@
                     <p>Como culminância, organizaram um Padlet interativo com materiais sobre Miguel de Cervantes, contexto histórico, curiosidades e interpretações, ampliando a experiência literária.</p>
                     <p>O projeto mostrou como a tradição literária pode se reinventar com recursos digitais, incentivando novas formas de expressão e compartilhamento criativo.</p>
                     <div class="cta">
-                        <a class="btn" href="padlet.html">Ver Padlet</a>
-                        <a class="btn" href="venenodigital.html">Veneno Digital</a>
-                        <a class="btn" href="livros.html">Dom Quixote</a>
+                        <a class="btn" href="padlet.html" target="_blank" rel="noopener noreferrer">Ver Padlet</a>
+                        <a class="btn" href="venenodigital.html" target="_blank" rel="noopener noreferrer">Veneno Digital</a>
+                        <a class="btn" href="livros.html" target="_blank" rel="noopener noreferrer">Dom Quixote</a>
                     </div>
                 </article>
             </div>
