--- a/escape.html
+++ b/escape.html
@@ -30,7 +30,7 @@
                 <a href="https://www.canva.com/design/DAGvf6ROPkI/sFluE8XNggZoetAvx_qSKA/edit" target="_blank" class="book-card">
                     <div class="book-cover">
                         <div class="book-icon">🎨</div>
-                        <div class="book-title">Apresentação Canva 1</div>
+                        <div class="book-title">Escolhas do apocalipse</div>
                         <div class="open-indicator">Clique para visualizar</div>
                     </div>
                 </a>
@@ -38,7 +38,7 @@
                 <a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&token=67d7179cbd3449a08cc268f4aae149d1&id=45TVkwuvmUCEh4-FEfe1rt5Xok_h9BtBtKADynR5KkRUMDFUVDU4Rk9PSFZBQjVFWEtVRjZCRlZTUi4u" target="_blank" class="book-card">
                     <div class="book-cover">
                         <div class="book-icon">📋</div>
-                        <div class="book-title">Formulário Office</div>
+                        <div class="book-title">Sustentabilidade e consumo crítico</div>
                         <div class="open-indicator">Clique para acessar</div>
                     </div>
                 </a>
@@ -46,7 +46,7 @@
                 <a href="https://www.canva.com/design/DAGvGz0e6tg/5SaytEDvrozwd84uxkUQWg/edit" target="_blank" class="book-card">
                     <div class="book-cover">
                         <div class="book-icon">🎨</div>
-                        <div class="book-title">Apresentação Canva 2</div>
+                        <div class="book-title">O enigma consciente</div>
                         <div class="open-indicator">Clique para visualizar</div>
                     </div>
                 </a>
@@ -54,7 +54,7 @@
                 <a href="https://www.canva.com/design/DAGrKzbH7_4/iMcnSB8cWqMoqEGjvsYqQg/edit" target="_blank" class="book-card">
                     <div class="book-cover">
                         <div class="book-icon">🎨</div>
-                        <div class="book-title">Apresentação Canva 3</div>
+                        <div class="book-title">Código sustentável</div>
                         <div class="open-indicator">Clique para visualizar</div>
                     </div>
                 </a>
@@ -62,7 +62,7 @@
                 <a href="https://www.canva.com/design/DAGvcNn6TwY/SJ43PBMrD1y5We4FQ4sJzA/edit" target="_blank" class="book-card">
                     <div class="book-cover">
                         <div class="book-icon">🎨</div>
-                        <div class="book-title">Apresentação Canva 4</div>
+                        <div class="book-title">Mistérios na praia</div>
                         <div class="open-indicator">Clique para visualizar</div>
                     </div>
                 </a>
@@ -70,7 +70,7 @@
                 <a href="https://www.canva.com/design/DAGvGzI9jTA/kW41b5LUuUv73TOIa-YNiQ/edit" target="_blank" class="book-card">
                     <div class="book-cover">
                         <div class="book-icon">🎨</div>
-                        <div class="book-title">Apresentação Canva 5</div>
+                        <div class="book-title">Consumo consciente</div>
                         <div class="open-indicator">Clique para visualizar</div>
                     </div>
                 </a>
@@ -78,7 +78,7 @@
                 <a href="https://www.canva.com/design/DAGvU_5_XGg/uSAwM5qfI3VUgCpm0kw3Ng/edit" target="_blank" class="book-card">
                     <div class="book-cover">
                         <div class="book-icon">🎨</div>
-                        <div class="book-title">Apresentação Canva 6</div>
+                        <div class="book-title">Escape 60</div>
                         <div class="open-indicator">Clique para visualizar</div>
                     </div>
                 </a>
@@ -92,7 +92,7 @@
                 <a href="https://www.canva.com/design/DAGvT8yixbA/mDeqforXRdjpeSNZ1Pgrlw/edit" target="_blank" class="book-card">
                     <div class="book-cover">
                         <div class="book-icon">🎨</div>
-                        <div class="book-title">Apresentação Canva 1</div>
+                        <div class="book-title">Santa News</div>
                         <div class="open-indicator">Clique para visualizar</div>
                     </div>
                 </a>
@@ -100,7 +100,7 @@
                 <a href="https://www.canva.com/design/DAGvfslYl6g/uZnpPHNgcKb3rwqVhNOkkA/edit" target="_blank" class="book-card">
                     <div class="book-cover">
                         <div class="book-icon">🎨</div>
-                        <div class="book-title">Apresentação Canva 2</div>
+                        <div class="book-title">Escape Room</div>
                         <div class="open-indicator">Clique para visualizar</div>
                     </div>
                 </a>
@@ -108,7 +108,7 @@
                 <a href="https://www.canva.com/design/DAGwdE9YXL8/Y0okMt09Oi2oSH1kSIFGzw/edit" target="_blank" class="book-card">
                     <div class="book-cover">
                         <div class="book-icon">🎨</div>
-                        <div class="book-title">Apresentação Canva 3</div>
+                        <div class="book-title">O maníaco do consumismo</div>
                         <div class="open-indicator">Clique para visualizar</div>
                     </div>
                 </a>
@@ -116,7 +116,7 @@
                 <a href="https://www.canva.com/design/DAGvcX_i33U/VRFWw4ZFYP-0hh2_rGuLLA/edit" target="_blank" class="book-card">
                     <div class="book-cover">
                         <div class="book-icon">🎨</div>
-                        <div class="book-title">Apresentação Canva 4</div>
+                        <div class="book-title">Desafio de emprego</div>
                         <div class="open-indicator">Clique para visualizar</div>
                     </div>
                 </a>
@@ -124,7 +124,7 @@
                 <a href="https://www.canva.com/design/DAGv95YAgng/rsE4kNwT6GmxRWyNKAUD_g/edit" target="_blank" class="book-card">
                     <div class="book-cover">
                         <div class="book-icon">🎨</div>
-                        <div class="book-title">Apresentação Canva 5</div>
+                        <div class="book-title">O futuro em nossas mãos</div>
                         <div class="open-indicator">Clique para visualizar</div>
                     </div>
                 </a>
@@ -132,7 +132,7 @@
                 <a href="https://santamarcelinaedubr-my.sharepoint.com/:p:/g/personal/12011900145_aluno_santamarcelina_edu_br/ETdOOINzAfJCt1ivrQvkgscB4LyEhKdB537Q96YuOxCx3A?e=sqEK6q" target="_blank" class="book-card">
                     <div class="book-cover">
                         <div class="book-icon">📊</div>
-                        <div class="book-title">Apresentação PowerPoint</div>
+                        <div class="book-title">Cientistas do consumo</div>
                         <div class="open-indicator">Clique para visualizar</div>
                     </div>
                 </a>
@@ -140,7 +140,7 @@
                 <a href="https://www.canva.com/design/DAGvNMgSSUY/PaaAZEKQp_CzcOzc-MuA8Q/edit" target="_blank" class="book-card">
                     <div class="book-cover">
                         <div class="book-icon">🎨</div>
-                        <div class="book-title">Apresentação Canva 6</div>
+                        <div class="book-title">Consumo e consumismo</div>
                         <div class="open-indicator">Clique para visualizar</div>
                     </div>
                 </a>
@@ -148,7 +148,7 @@
                 <a href="https://www.canva.com/design/DAGvbTgqPSk/O_KX3OcP7nTwgJ5EPkP_DQ/edit" target="_blank" class="book-card">
                     <div class="book-cover">
                         <div class="book-icon">🎨</div>
-                        <div class="book-title">Apresentação Canva 7</div>
+                        <div class="book-title">O preço da escolha</div>
                         <div class="open-indicator">Clique para visualizar</div>
                     </div>
                 </a>
