--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="livros.html" target="_blank" rel="noopener noreferrer">Dom Quixote</a>
             <a href="venenodigital.html" target="_blank" rel="noopener noreferrer">Veneno Digital</a>
             <a href="padlet.html" target="_blank" rel="noopener noreferrer">Padlet</a>
+            <a href="makingoff.html" target="_blank" rel="noopener noreferrer">Making Of</a>
             <a href="cartilhas.html" target="_blank" rel="noopener noreferrer">Cartilhas</a>
         </nav>
     </header>
@@ -73,6 +74,14 @@
                     <div class="book-cover">
                         <div class="book-icon">🗂️</div>
                         <div class="book-title">Padlet - 7º Ano</div>
+                        <div class="open-indicator">Entrar</div>
+                    </div>
+                </a>
+
+                <a href="makingoff.html" class="book-card">
+                    <div class="book-cover">
+                        <div class="book-icon">🎬</div>
+                        <div class="book-title">Making Of - FliSanta 2025</div>
                         <div class="open-indicator">Entrar</div>
                     </div>
                 </a>
