--- a/cartilhas.html
+++ b/cartilhas.html
@@ -18,6 +18,7 @@
             <a href="livros.html" target="_blank" rel="noopener noreferrer">Biblioteca</a>
             <a href="venenodigital.html" target="_blank" rel="noopener noreferrer">Veneno Digital</a>
             <a href="padlet.html" target="_blank" rel="noopener noreferrer">Padlet</a>
+            <a href="makingoff.html" target="_blank" rel="noopener noreferrer">Making Of</a>
             <a href="cartilhas.html" target="_blank" rel="noopener noreferrer">Cartilhas</a>
         </nav>
     </header>
